fix checkbox alignment

--- a/biotope-boilerplate/src/components/RegistrationForm/styles.scss
+++ b/biotope-boilerplate/src/components/RegistrationForm/styles.scss
@@ -48,7 +48,7 @@
                 height: 1.1em;
                 width: 1.1em;
                 font-size:0.7em;
-                line-height: 1em;
+                line-height: 1.1em;
                 margin-right: 8px;
                 padding: 2px;
                 text-align: center;
